Changed texts to comply with reviews

--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/ApendiceA.tex
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/ApendiceA.tex
@@ -1,4 +1,4 @@
-\section{Previsão para 2 meses a frente}
+\section{Previsão para 2 meses à frente}
 \begin{figure}[H]
 	\begin{center}
 		{
@@ -6,7 +6,7 @@
 				
 				\includegraphics[width=\textwidth]{rmse_val_set_t2.jpg}
 				
-				\caption[\small{RMSE pelo número de neurônios no conjunto de validação.}]{\label{rmseValT2} \small{RMSE pelo número de neurônios no conjunto de validação.}}
+				\caption[\small{RMSE pelo número de neurônios no conjunto de validação para previsão do PLD 2 meses à frente.}]{\label{rmseValT2} \small{RMSE pelo número de neurônios no conjunto de validação.}}
 				
 			\end{center}
 		}	
@@ -22,7 +22,7 @@
 				
 				\includegraphics[width=\textwidth]{rmse_test_set_t2.jpg}
 				
-				\caption[\small{RMSE pelo número de neurônios no conjunto de teste.}]{\label{rmseTestT2} \small{RMSE pelo número de neurônios no conjunto de teste.}}
+				\caption[\small{RMSE pelo número de neurônios no conjunto de teste para previsão do PLD 2 meses à frente.}]{\label{rmseTestT2} \small{RMSE pelo número de neurônios no conjunto de teste.}}
 				
 			\end{center}
 		}	
@@ -32,7 +32,7 @@
 
 \begin{table}[H]	
 	\begin{center}
-		\caption{Resultados obtidos com as redes no dataset de validação.}			
+		\caption{Resultados obtidos com as redes no dataset de validação para previsão do PLD 2 meses à frente.}			
 		\begin{tabular}{|c|c|c|c|c|c|c|c|}\hline \label{table:tabelaT2}
 			
 			\textbf{\#neurônios} & \textbf{RMSE} & \textbf{STD} & \textbf{$a$ (média)} & \textbf{$\epsilon_1$} & \textbf{$b$ (média)} & \textbf{$\epsilon_2$} & \textbf{$\epsilon_3$}\\ \hline \vspace{-1.0mm}69 & 97,141 & 76,580 & 1,029 & 0,001 & 0,011 & 0,000 & 0,001 \\ \hline
@@ -53,7 +53,7 @@
 				
 				\includegraphics[width=\textwidth]{convergence_t2.jpg}
 				
-				\caption[\small{Erro pelo número de épocas e por fold.}]{\label{convT2} \small{Erro pelo número de épocas e por fold.}}
+				\caption[\small{Erro pelo número de épocas e por subconjunto para previsão do PLD 2 meses à frente.}]{\label{convT2} \small{Erro pelo número de épocas e por subconjunto para previsão do PLD 2 meses à frente.}}
 				
 			\end{center}
 		}	
@@ -69,14 +69,14 @@
 				
 				\includegraphics[width=\textwidth]{sinal_completo_t2.jpg}
 				
-				\caption[\small{Comparação entre o sinal original e o resultado obtido.}]{\label{completoT2} \small{Comparação entre o sinal original e o resultado obtido.}}
+				\caption[\small{Comparação entre o sinal original e o resultado obtido para previsão do PLD 2 meses à frente.}]{\label{completoT2} \small{Comparação entre o sinal original e o resultado obtido para previsão do PLD 2 meses à frente.}}
 				
 			\end{center}
 		}	
 	\end{center}	
 \end{figure}
 
-\section{Previsão para 3 meses a frente}
+\section{Previsão para 3 meses à frente}
 \begin{figure}[H]
 	\begin{center}
 		{
@@ -84,7 +84,7 @@
 				
 				\includegraphics[width=\textwidth]{rmse_val_set_t3.jpg}
 				
-				\caption[\small{RMSE pelo número de neurônios no conjunto de validação.}]{\label{rmseValT3} \small{RMSE pelo número de neurônios no conjunto de validação.}}
+				\caption[\small{RMSE pelo número de neurônios no conjunto de validação para previsão do PLD 3 meses à frente.}]{\label{rmseValT3} \small{RMSE pelo número de neurônios no conjunto de validação para previsão do PLD 3 meses à frente.}}
 				
 			\end{center}
 		}	
@@ -100,7 +100,7 @@
 				
 				\includegraphics[width=\textwidth]{rmse_test_set_t3.jpg}
 				
-				\caption[\small{RMSE pelo número de neurônios no conjunto de teste.}]{\label{rmseTestT3} \small{RMSE pelo número de neurônios no conjunto de teste.}}
+				\caption[\small{RMSE pelo número de neurônios no conjunto de teste para previsão do PLD 3 meses à frente.}]{\label{rmseTestT3} \small{RMSE pelo número de neurônios no conjunto de teste para previsão do PLD 3 meses à frente.}}
 				
 			\end{center}
 		}	
@@ -110,7 +110,7 @@
 
 \begin{table}[H]	
 	\begin{center}
-		\caption{Resultados obtidos com as redes no dataset de validação.}			
+		\caption{Resultados obtidos com as redes no dataset de validação para previsão do PLD 3 meses à frente.}			
 		\begin{tabular}{|c|c|c|c|c|c|c|c|}\hline \label{table:tabelaT3}
 			
 			\textbf{\#neurônios} & \textbf{RMSE} & \textbf{STD} & \textbf{$a$ (média)} & \textbf{$\epsilon_1$} & \textbf{$b$ (média)} & \textbf{$\epsilon_2$} & \textbf{$\epsilon_3$}\\ \hline \vspace{-1.0mm}88 & 75,835 & 69,489 & 1,003 & 0,000 & 0,019 & 0,004 & 0,004  \\ \hline
@@ -131,7 +131,7 @@
 				
 				\includegraphics[width=\textwidth]{convergence_t3.jpg}
 				
-				\caption[\small{Erro pelo número de épocas e por fold.}]{\label{convT3} \small{Erro pelo número de épocas e por fold.}}
+				\caption[\small{Erro pelo número de épocas e por subconjunto para previsão do PLD 3 meses à frente.}]{\label{convT3} \small{Erro pelo número de épocas e por subconjunto para previsão do PLD 3 meses à frente.}}
 				
 			\end{center}
 		}	
@@ -146,14 +146,14 @@
 				
 				\includegraphics[width=\textwidth]{sinal_completo_t3.jpg}
 				
-				\caption[\small{Comparação entre o sinal original e o resultado obtido.}]{\label{completoT3} \small{Comparação entre o sinal original e o resultado obtido.}}
+				\caption[\small{Comparação entre o sinal original e o resultado obtido para previsão do PLD 3 meses à frente.}]{\label{completoT3} \small{Comparação entre o sinal original e o resultado obtido para previsão do PLD 3 meses à frente.}}
 				
 			\end{center}
 		}	
 	\end{center}	
 \end{figure}
 
-\section{Previsão para 4 meses a frente}
+\section{Previsão para 4 meses à frente}
 \begin{figure}[H]
 	\begin{center}
 		{
@@ -161,7 +161,7 @@
 				
 				\includegraphics[width=\textwidth]{rmse_val_set_t4.jpg}
 				
-				\caption[\small{RMSE pelo número de neurônios no conjunto de validação.}]{\label{rmseValT4} \small{RMSE pelo número de neurônios no conjunto de validação.}}
+				\caption[\small{RMSE pelo número de neurônios no conjunto de validação para previsão do PLD 4 meses à frente.}]{\label{rmseValT4} \small{RMSE pelo número de neurônios no conjunto de validação para previsão do PLD 4 meses à frente.}}
 				
 			\end{center}
 		}	
@@ -177,7 +177,7 @@
 				
 				\includegraphics[width=\textwidth]{rmse_test_set_t4.jpg}
 				
-				\caption[\small{RMSE pelo número de neurônios no conjunto de teste.}]{\label{rmseTestT4} \small{RMSE pelo número de neurônios no conjunto de teste.}}
+				\caption[\small{RMSE pelo número de neurônios no conjunto de teste para previsão do PLD 4 meses à frente.}]{\label{rmseTestT4} \small{RMSE pelo número de neurônios no conjunto de teste para previsão do PLD 4 meses à frente.}}
 				
 			\end{center}
 		}	
@@ -187,7 +187,7 @@
 
 \begin{table}[H]	
 	\begin{center}
-		\caption{Resultados obtidos com as redes no dataset de validação.}			
+		\caption{Resultados obtidos com as redes no dataset de validação para previsão do PLD 4 meses à frente.}			
 		\begin{tabular}{|c|c|c|c|c|c|c|c|}\hline \label{table:tabelaT4}
 			
 			\textbf{\#neurônios} & \textbf{RMSE} & \textbf{STD} & \textbf{$a$ (média)} & \textbf{$\epsilon_1$} & \textbf{$b$ (média)} & \textbf{$\epsilon_2$} & \textbf{$\epsilon_3$}\\ \hline \vspace{-1.0mm}87 & 66,068 & 49,039 & 1,093 & 0,002 & 0,029 & 0,001 & 0,003 \\ \hline
@@ -208,7 +208,7 @@
 				
 				\includegraphics[width=\textwidth]{convergence_t4.jpg}
 				
-				\caption[\small{Erro pelo número de épocas e por fold.}]{\label{convT4} \small{Erro pelo número de épocas e por fold.}}
+				\caption[\small{Erro pelo número de épocas e por subconjunto para previsão do PLD 4 meses à frente.}]{\label{convT4} \small{Erro pelo número de épocas e por subconjunto para previsão do PLD 4 meses à frente.}}
 				
 			\end{center}
 		}	
@@ -223,14 +223,14 @@
 				
 				\includegraphics[width=\textwidth]{sinal_completo_t4.jpg}
 				
-				\caption[\small{Comparação entre o sinal original e o resultado obtido.}]{\label{completoT4} \small{Comparação entre o sinal original e o resultado obtido.}}
+				\caption[\small{Comparação entre o sinal original e o resultado obtido para previsão do PLD 4 meses à frente.}]{\label{completoT4} \small{Comparação entre o sinal original e o resultado obtido para previsão do PLD 4 meses à frente.}}
 				
 			\end{center}
 		}	
 	\end{center}	
 \end{figure}
 
-\section{Previsão para 5 meses a frente}
+\section{Previsão para 5 meses à frente}
 \begin{figure}[H]
 	\begin{center}
 		{
@@ -238,7 +238,7 @@
 				
 				\includegraphics[width=\textwidth]{rmse_val_set_t5.jpg}
 				
-				\caption[\small{RMSE pelo número de neurônios no conjunto de validação.}]{\label{rmseValT5} \small{RMSE pelo número de neurônios no conjunto de validação.}}
+				\caption[\small{RMSE pelo número de neurônios no conjunto de validação para previsão do PLD 5 meses à frente.}]{\label{rmseValT5} \small{RMSE pelo número de neurônios no conjunto de validação para previsão do PLD 5 meses à frente.}}
 				
 			\end{center}
 		}	
@@ -254,7 +254,7 @@
 				
 				\includegraphics[width=\textwidth]{rmse_test_set_t5.jpg}
 				
-				\caption[\small{RMSE pelo número de neurônios no conjunto de teste.}]{\label{rmseTestT5} \small{RMSE pelo número de neurônios no conjunto de teste.}}
+				\caption[\small{RMSE pelo número de neurônios no conjunto de teste para previsão do PLD 5 meses à frente.}]{\label{rmseTestT5} \small{RMSE pelo número de neurônios no conjunto de teste para previsão do PLD 5 meses à frente.}}
 				
 			\end{center}
 		}	
@@ -264,7 +264,7 @@
 
 \begin{table}[H]	
 	\begin{center}
-		\caption{Resultados obtidos com as redes no dataset de validação.}			
+		\caption{Resultados obtidos com as redes no dataset de validação para previsão do PLD 5 meses à frente.}			
 		\begin{tabular}{|c|c|c|c|c|c|c|c|}\hline \label{table:tabelaT5}
 			
 			\textbf{\#neurônios} & \textbf{RMSE} & \textbf{STD} & \textbf{$a$ (média)} & \textbf{$\epsilon_1$} & \textbf{$b$ (média)} & \textbf{$\epsilon_2$} & \textbf{$\epsilon_3$}\\ \hline \vspace{-1.0mm}34 & 63,022 & 54,479 & 0,956 & 0,000 & -0,014 & 0,000 & 0,001 \\ \hline
@@ -286,7 +286,7 @@
 				
 				\includegraphics[width=\textwidth]{convergence_t5.jpg}
 				
-				\caption[\small{Erro pelo número de épocas e por fold.}]{\label{convT5} \small{Erro pelo número de épocas e por fold.}}
+				\caption[\small{Erro pelo número de épocas e por subconjunto para previsão do PLD 5 meses à frente.}]{\label{convT5} \small{Erro pelo número de épocas e por subconjunto para previsão do PLD 5 meses à frente.}}
 				
 			\end{center}
 		}	
@@ -301,14 +301,14 @@
 				
 				\includegraphics[width=\textwidth]{sinal_completo_t5.jpg}
 				
-				\caption[\small{Comparação entre o sinal original e o resultado obtido.}]{\label{completoT5} \small{Comparação entre o sinal original e o resultado obtido.}}
+				\caption[\small{Comparação entre o sinal original e o resultado obtido para previsão do PLD 5 meses à frente.}]{\label{completoT5} \small{Comparação entre o sinal original e o resultado obtido para previsão do PLD 5 meses à frente.}}
 				
 			\end{center}
 		}	
 	\end{center}	
 \end{figure}
 
-\section{Previsão para 6 meses a frente}
+\section{Previsão para 6 meses à frente}
 \begin{figure}[H]
 	\begin{center}
 		{
@@ -316,7 +316,7 @@
 				
 				\includegraphics[width=\textwidth]{rmse_val_set_t6.jpg}
 				
-				\caption[\small{RMSE pelo número de neurônios no conjunto de validação.}]{\label{rmseValT6} \small{RMSE pelo número de neurônios no conjunto de validação.}}
+				\caption[\small{RMSE pelo número de neurônios no conjunto de validação para previsão do PLD 6 meses à frente.}]{\label{rmseValT6} \small{RMSE pelo número de neurônios no conjunto de validação.}}
 				
 			\end{center}
 		}	
@@ -332,7 +332,7 @@
 				
 				\includegraphics[width=\textwidth]{rmse_test_set_t6.jpg}
 				
-				\caption[\small{RMSE pelo número de neurônios no conjunto de teste.}]{\label{rmseTestT6} {RMSE pelo número de neurônios no conjunto de teste.}}
+				\caption[\small{RMSE pelo número de neurônios no conjunto de teste para previsão do PLD 6 meses à frente.}]{\label{rmseTestT6} {RMSE pelo número de neurônios no conjunto de teste para previsão do PLD 6 meses à frente.}}
 				
 			\end{center}
 		}	
@@ -342,7 +342,7 @@
 
 \begin{table}[H]	
 	\begin{center}
-		\caption{Resultados obtidos com as redes no dataset de validação.}			
+		\caption{Resultados obtidos com as redes no dataset de validação para previsão do PLD 6 meses à frente.}			
 		\begin{tabular}{|c|c|c|c|c|c|c|c|}\hline \label{table:tabelaT6}
 			
 			\textbf{\#neurônios} & \textbf{RMSE} & \textbf{STD} & \textbf{$a$ (média)} & \textbf{$\epsilon_1$} & \textbf{$b$ (média)} & \textbf{$\epsilon_2$} & \textbf{$\epsilon_3$}\\ \hline \vspace{-1.0mm}57 & 88,770 & 79,111 & 0,975 & 0,000 & -0,008 & 0,000 & 0,001 \\ \hline
@@ -363,7 +363,7 @@
 				
 				\includegraphics[width=\textwidth]{convergence_t6.jpg}
 				
-				\caption[\small{Erro pelo número de épocas e por fold.}]{\label{convT6} \small{Erro pelo número de épocas e por fold.}}
+				\caption[\small{Erro pelo número de épocas e por subconjunto para previsão do PLD 6 meses à frente.}]{\label{convT6} \small{Erro pelo número de épocas e por subconjunto para previsão do PLD 6 meses à frente.}}
 				
 			\end{center}
 		}	
@@ -378,14 +378,14 @@
 				
 				\includegraphics[width=\textwidth]{sinal_completo_t6.jpg}
 				
-				\caption[\small{Comparação entre o sinal original e o resultado obtido.}]{\label{completoT6} \small{Comparação entre o sinal original e o resultado obtido.}}
+				\caption[\small{Comparação entre o sinal original e o resultado obtido para previsão do PLD 6 meses à frente.}]{\label{completoT6} \small{Comparação entre o sinal original e o resultado obtido para previsão do PLD 6 meses à frente.}}
 				
 			\end{center}
 		}	
 	\end{center}	
 \end{figure}
 
-\section{Previsão para 7 meses a frente}
+\section{Previsão para 7 meses à frente}
 \begin{figure}[H]
 	\begin{center}
 		{
@@ -393,7 +393,7 @@
 				
 				\includegraphics[width=\textwidth]{rmse_val_set_t7.jpg}
 				
-				\caption[\small{RMSE pelo número de neurônios no conjunto de validação.}]{\label{rmseValT7} \small{RMSE pelo número de neurônios no conjunto de validação.}}
+				\caption[\small{RMSE pelo número de neurônios no conjunto de validação para previsão do PLD 7 meses à frente.}]{\label{rmseValT7} \small{RMSE pelo número de neurônios no conjunto de validação para previsão do PLD 7 meses à frente.}}
 				
 			\end{center}
 		}	
@@ -409,7 +409,7 @@
 				
 				\includegraphics[width=\textwidth]{rmse_test_set_t7.jpg}
 				
-				\caption[\small{RMSE pelo número de neurônios no conjunto de teste.}]{\label{rmseTestT7} \small{RMSE pelo número de neurônios no conjunto de teste.}}
+				\caption[\small{RMSE pelo número de neurônios no conjunto de teste.}]{\label{rmseTestT7} \small{RMSE pelo número de neurônios no conjunto de teste para previsão do PLD 7 meses à frente.}}
 				
 			\end{center}
 		}	
@@ -419,7 +419,7 @@
 
 \begin{table}[H]	
 	\begin{center}
-		\caption{Resultados obtidos com as redes no dataset de validação.}			
+		\caption{Resultados obtidos com as redes no dataset de validação para previsão do PLD 7 meses à frente.}			
 		\begin{tabular}{|c|c|c|c|c|c|c|c|}\hline \label{table:tabelaT7}
 			
 			\textbf{\#neurônios} & \textbf{RMSE} & \textbf{STD} & \textbf{$a$ (média)} & \textbf{$\epsilon_1$} & \textbf{$b$ (média)} & \textbf{$\epsilon_2$} & \textbf{$\epsilon_3$}\\ \hline \vspace{-1.0mm}85 & 81,374 & 74,638 & 1,073 & 0,001 & -0,015 & 0,000 & 0,001 \\ \hline
@@ -440,7 +440,7 @@
 				
 				\includegraphics[width=\textwidth]{convergence_t7.jpg}
 				
-				\caption[\small{Erro pelo número de épocas e por fold.}]{\label{convT7} \small{Erro pelo número de épocas e por fold.}}
+				\caption[\small{Erro pelo número de épocas e por subconjunto.}]{\label{convT7} \small{Erro pelo número de épocas e por subconjunto para previsão do PLD 7 meses à frente.}}
 				
 			\end{center}
 		}	
@@ -455,14 +455,14 @@
 				
 				\includegraphics[width=\textwidth]{sinal_completo_t7.jpg}
 				
-				\caption[\small{Comparação entre o sinal original e o resultado obtido.}]{\label{completoT7} \small{Comparação entre o sinal original e o resultado obtido.}}
+				\caption[\small{Comparação entre o sinal original e o resultado obtido para previsão do PLD 7 meses à frente.}]{\label{completoT7} \small{Comparação entre o sinal original e o resultado obtido para previsão do PLD 7 meses à frente.}}
 				
 			\end{center}
 		}	
 	\end{center}	
 \end{figure}
 
-\section{Previsão para 8 meses a frente}
+\section{Previsão para 8 meses à frente}
 \begin{figure}[H]
 	\begin{center}
 		{
@@ -470,7 +470,7 @@
 				
 				\includegraphics[width=\textwidth]{rmse_val_set_t8.jpg}
 				
-				\caption[\small{RMSE pelo número de neurônios no conjunto de validação.}]{\label{rmseValT8} \small{RMSE pelo número de neurônios no conjunto de validação.}}
+				\caption[\small{RMSE pelo número de neurônios no conjunto de validação para previsão do PLD 7 meses à frente.}]{\label{rmseValT8} \small{RMSE pelo número de neurônios no conjunto de validação para previsão do PLD 7 meses à frente.}}
 				
 			\end{center}
 		}	
@@ -486,7 +486,7 @@
 				
 				\includegraphics[width=\textwidth]{rmse_test_set_t8.jpg}
 				
-				\caption[\small{RMSE pelo número de neurônios no conjunto de teste.}]{\label{rmseTestT8} \small{RMSE pelo número de neurônios no conjunto de teste.}}
+				\caption[\small{RMSE pelo número de neurônios no conjunto de teste para previsão do PLD 8 meses à frente.}]{\label{rmseTestT8} \small{RMSE pelo número de neurônios no conjunto de teste para previsão do PLD 8 meses à frente.}}
 				
 			\end{center}
 		}	
@@ -496,7 +496,7 @@
 
 \begin{table}[H]	
 	\begin{center}
-		\caption{Resultados obtidos com as redes no dataset de validação.}			
+		\caption{Resultados obtidos com as redes no dataset de validação para previsão do PLD 8 meses à frente.}			
 		\begin{tabular}{|c|c|c|c|c|c|c|c|}\hline \label{table:tabelaT8}
 			
 			\textbf{\#neurônios} & \textbf{RMSE} & \textbf{STD} & \textbf{$a$ (média)} & \textbf{$\epsilon_1$} & \textbf{$b$ (média)} & \textbf{$\epsilon_2$} & \textbf{$\epsilon_3$}\\ \hline \vspace{-1.0mm}29 & 93,498 & 61,547 & 1,060 & 0,001 & -0,002 & 0,000 & 0,001 \\ \hline
@@ -517,7 +517,7 @@
 				
 				\includegraphics[width=\textwidth]{convergence_t8.jpg}
 				
-				\caption[\small{Erro pelo número de épocas e por fold.}]{\label{convT8} \small{Erro pelo número de épocas e por fold.}}
+				\caption[\small{Erro pelo número de épocas e por subconjunto para previsão do PLD 8 meses à frente.}]{\label{convT8} \small{Erro pelo número de épocas e por subconjunto para previsão do PLD 8 meses à frente.}}
 				
 			\end{center}
 		}	
@@ -532,14 +532,14 @@
 				
 				\includegraphics[width=\textwidth]{sinal_completo_t8.jpg}
 				
-				\caption[\small{Comparação entre o sinal original e o resultado obtido.}]{\label{completoT8} \small{Comparação entre o sinal original e o resultado obtido.}}
+				\caption[\small{Comparação entre o sinal original e o resultado obtido para previsão do PLD 8 meses à frente.}]{\label{completoT8} \small{Comparação entre o sinal original e o resultado obtido para previsão do PLD 8 meses à frente.}}
 				
 			\end{center}
 		}	
 	\end{center}	
 \end{figure}
 
-\section{Previsão para 9 meses a frente}
+\section{Previsão para 9 meses à frente}
 \begin{figure}[H]
 	\begin{center}
 		{
@@ -547,7 +547,7 @@
 				
 				\includegraphics[width=\textwidth]{rmse_val_set_t9.jpg}
 				
-				\caption[\small{RMSE pelo número de neurônios no conjunto de validação.}]{\label{rmseValT9} \small{RMSE pelo número de neurônios no conjunto de validação.}}
+				\caption[\small{RMSE pelo número de neurônios no conjunto de validação para previsão do PLD 9 meses à frente.}]{\label{rmseValT9} \small{RMSE pelo número de neurônios no conjunto de validação para previsão do PLD 9 meses à frente.}}
 				
 			\end{center}
 		}	
@@ -563,7 +563,7 @@
 				
 				\includegraphics[width=\textwidth]{rmse_test_set_t9.jpg}
 				
-				\caption[\small{RMSE pelo número de neurônios no conjunto de teste.}]{\label{rmseTestT9} \small{RMSE pelo número de neurônios no conjunto de teste.}}
+				\caption[\small{RMSE pelo número de neurônios no conjunto de teste para previsão do PLD 9 meses à frente.}]{\label{rmseTestT9} \small{RMSE pelo número de neurônios no conjunto de teste para previsão do PLD 9 meses à frente.}}
 				
 			\end{center}
 		}	
@@ -573,7 +573,7 @@
 
 \begin{table}[H]	
 	\begin{center}
-		\caption{Resultados obtidos com as redes no dataset de validação.}			
+		\caption{Resultados obtidos com as redes no dataset de validação para previsão do PLD 9 meses à frente.}			
 		\begin{tabular}{|c|c|c|c|c|c|c|c|}\hline \label{table:tabelaT9}
 			
 			\textbf{\#neurônios} & \textbf{RMSE} & \textbf{STD} & \textbf{$a$ (média)} & \textbf{$\epsilon_1$} & \textbf{$b$ (média)} & \textbf{$\epsilon_2$} & \textbf{$\epsilon_3$}\\ \hline \vspace{-1.0mm}66 & 53,146 & 35,811 & 0,968 & 0,000 & -0,132 & 0,001 & 0,002 \\ \hline
@@ -594,7 +594,7 @@
 				
 				\includegraphics[width=\textwidth]{convergence_t9.jpg}
 				
-				\caption[\small{Erro pelo número de épocas e por fold.}]{\label{convT9} \small{Erro pelo número de épocas e por fold.}}
+				\caption[\small{Erro pelo número de épocas e por subconjunto para previsão do PLD 9 meses à frente.}]{\label{convT9} \small{Erro pelo número de épocas e por subconjunto para previsão do PLD 9 meses à frente.}}
 				
 			\end{center}
 		}	
@@ -609,14 +609,14 @@
 				
 				\includegraphics[width=\textwidth]{sinal_completo_t9.jpg}
 				
-				\caption[\small{Comparação entre o sinal original e o resultado obtido.}]{\label{completoT9} \small{Comparação entre o sinal original e o resultado obtido.}}
+				\caption[\small{Comparação entre o sinal original e o resultado obtido para previsão do PLD 9 meses à frente.}]{\label{completoT9} \small{Comparação entre o sinal original e o resultado obtido para previsão do PLD 9 meses à frente.}}
 				
 			\end{center}
 		}	
 	\end{center}	
 \end{figure}
 
-\section{Previsão para 10 meses a frente}
+\section{Previsão para 10 meses à frente}
 \begin{figure}[H]
 	\begin{center}
 		{
@@ -624,7 +624,7 @@
 				
 				\includegraphics[width=\textwidth]{rmse_val_set_t10.jpg}
 				
-				\caption[\small{RMSE pelo número de neurônios no conjunto de validação.}]{\label{rmseValT10} \small{RMSE pelo número de neurônios no conjunto de validação.}}
+				\caption[\small{RMSE pelo número de neurônios no conjunto de validação para previsão do PLD 10 meses à frente.}]{\label{rmseValT10} \small{RMSE pelo número de neurônios no conjunto de validação para previsão do PLD 10 meses à frente.}}
 				
 			\end{center}
 		}	
@@ -640,7 +640,7 @@
 				
 				\includegraphics[width=\textwidth]{rmse_test_set_t10.jpg}
 				
-				\caption[\small{RMSE pelo número de neurônios no conjunto de teste.}]{\label{rmseTestT10} \small{RMSE pelo número de neurônios no conjunto de teste.}}
+				\caption[\small{RMSE pelo número de neurônios no conjunto de teste.}]{\label{rmseTestT10} \small{RMSE pelo número de neurônios no conjunto de teste para previsão do PLD 10 meses à frente.}}
 				
 			\end{center}
 		}	
@@ -650,7 +650,7 @@
 
 \begin{table}[H]	
 	\begin{center}
-		\caption{Resultados obtidos com as redes no dataset de validação.}			
+		\caption{Resultados obtidos com as redes no dataset de validação para previsão do PLD 10 meses à frente.}			
 		\begin{tabular}{|c|c|c|c|c|c|c|c|}\hline \label{table:tabelaT10}
 			
 			\textbf{\#neurônios} & \textbf{RMSE} & \textbf{STD} & \textbf{$a$ (média)} & \textbf{$\epsilon_1$} & \textbf{$b$ (média)} & \textbf{$\epsilon_2$} & \textbf{$\epsilon_3$}\\ \hline \vspace{-1.0mm}74 & 47,276 & 24,496 & 0,979 & 0,000 & 0,092 & 0,002 & 0,002 \\ \hline
@@ -669,9 +669,9 @@
 		{
 			\begin{center}
 				
-				\includegraphics[width=\textwidth]{convergence_t3.jpg}
+				\includegraphics[width=\textwidth]{convergence_t10.jpg}
 				
-				\caption[\small{Erro pelo número de épocas e por fold.}]{\label{convT10} \small{Erro pelo número de épocas e por fold.}}
+				\caption[\small{Erro pelo número de épocas e por subconjunto para previsão do PLD 10 meses à frente.}]{\label{convT10} \small{Erro pelo número de épocas e por subconjunto para previsão do PLD 10 meses à frente.}}
 				
 			\end{center}
 		}	
@@ -684,9 +684,9 @@
 		{
 			\begin{center}
 				
-				\includegraphics[width=\textwidth]{sinal_completo_t3.jpg}
+				\includegraphics[width=\textwidth]{sinal_completo_t10.jpg}
 				
-				\caption[\small{Comparação entre o sinal original e o resultado obtido.}]{\label{completoT10} \small{Comparação entre o sinal original e o resultado obtido.}}
+				\caption[\small{Comparação entre o sinal original e o resultado obtido para previsão do PLD 10 meses à frente.}]{\label{completoT10} \small{Comparação entre o sinal original e o resultado obtido para previsão do PLD 10 meses à frente.}}
 				
 			\end{center}
 		}	
