--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/Capa.tex
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/Capa.tex
@@ -16,7 +16,7 @@
 \begin{center}
 Rio de Janeiro
 
-Outubro de 2008
+Fevereiro de 2020
 \end{center}
 
 
@@ -26,7 +26,7 @@ Outubro de 2008
 
 
 \begin{center}
-\large{Título}\\
+\large{Estimação do valor do preço de mercado da energia elétrica através de modelos não-lineares}\\
    \vspace{1cm}
 \large{Felipe Claudio da Silva Santos}\\
 \end{center}
@@ -107,5 +107,5 @@ Examinador:
 \begin{center}
 Rio de Janeiro
 
-Dezembro de 2019
+Fevereiro de 2020
 \end{center}
