--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/biblio.bib
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/biblio.bib
@@ -49,10 +49,26 @@
 @MISC{
 	RES_NORMA_482,
 	AUTHOR = "ANEEL",
-	TITLE = "Resolução normativa nº 482, de 17 de abrid de 2012",
+	TITLE = "Resolução normativa nº 482, de 17 de abril de 2012",
 	HOWPUBLISHED = "http://www2.aneel.gov.br/cedoc/ren2012482.pdf",
 	YEAR = "2019",
 	NOTE = "(Acesso em 26 Fevereiro 2019)",
+}
+@MISC{
+	ANEEL,
+	AUTHOR = "ANEEL",
+	TITLE = "Bem-vindo à ANEEL!",
+	HOWPUBLISHED = "https://www.aneel.gov.br/a-aneel",
+	YEAR = "2020",
+	NOTE = "(Acesso em 29 Fevereiro 2020)",
+}
+@MISC{
+	DECRETO_2003,
+	AUTHOR = "Subchefia para Assuntos Jurídicos",
+	TITLE = "DECRETO Nº 2.003, DE 10 DE SETEMBRO DE 1996",
+	HOWPUBLISHED = "http://www.planalto.gov.br/ccivil\_03/decreto/D2003.html",
+	YEAR = "2020",
+	NOTE = "(Acesso em 29 Fevereiro 2020)",
 }
 @PHDTHESIS{
 	EvolucaoSetorEletrico,
@@ -96,6 +112,15 @@
 	TITLE = "Preço spot de eletricidade: teoria e evidências do caso brasileiro",
 	JOURNAL = "IV Encontro de Enconomia Catarinense, 2010, Criciúma",
 	YEAR = "2010",
+}
+@misc{
+	AdaDelta,
+	title={ADADELTA: An Adaptive Learning Rate Method},
+	author={Matthew D. Zeiler},
+	year={2012},
+	eprint={1212.5701},
+	archivePrefix={arXiv},
+	primaryClass={cs.LG}
 }
 @MISC{
 	birthNY,
@@ -147,8 +172,7 @@
 	TITLE = "O que é neurônio?",
 	AUTHOR = "Brasil Escola",
 	HOWPUBLISHED = "https://brasilescola.uol.com.br/o-que-e/biologia/o-que-e-neuronio.htm",
-	YEAR= "2019"
-	
+	YEAR= "2019"	
 }
 
 @MISC{
