--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/cap2.tex
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/cap2.tex
@@ -1,11 +1,11 @@
 \paragraph{}Este capítulo tem como objetivo introduzir o leitor à estrutura do setor elétrico brasileiro, assim como expor os maiores desafios enfrentados. Também será apresentado e detalhado o problema a ser resolvido nesse projeto.
 
 \section{Histórico do Setor Elétrico Brasileiro}
-\paragraph{}No começo da década de 90 a estrutura do setor elétrico brasileiro`- SEB era verticalizada, composta por grandes estatais que tinham o controle sobre toda a cadeia produtiva (geração, transmissão e distribuição). Houve então uma reestruturação do setor (RE-SEB), baseado no princípio de que ``a eficiência no setor elétrico será assegurada através da competição, onde possível, e da regulamentação, onde necessária" \cite{AlteracaoModeloComercializacao}. Sendo assim, o mercado foi aberto para o setor privado. O SEB foi então divido em empresas de geração, transmissão, distribuição e comercialização de energia. Muitas empresas públicas foram leiloadas, dentre elas a Light (21/05/1996) e a CERJ (20/11//1996) \cite{EvolucaoSetorEletrico}.
+\paragraph{}No começo da década de 90 a estrutura do setor SEB - elétrico brasileiro  era verticalizada, composta por grandes estatais que tinham o controle sobre toda a cadeia produtiva (geração, transmissão e distribuição)\cite{EvolucaoSetorEletrico}. Houve então uma reestruturação do setor (RE-SEB), baseado no princípio de que ``a eficiência no setor elétrico será assegurada através da competição, onde possível, e da regulamentação, onde necessária" \cite{AlteracaoModeloComercializacao}. Sendo assim, o mercado foi aberto para o setor privado. O SEB foi então divido em empresas de geração, transmissão, distribuição e comercialização de energia. Muitas empresas públicas foram leiloadas, dentre elas a Light (21/05/1996) e a CERJ (20/11/1996) \cite{EvolucaoSetorEletrico}.
 
-\paragraph{}Um dos pilares do RE-SEB foi a regulamentação. Em 1996 foi criada a Agência Nacional de Energia Elétrica - ANEEL, a qual tem como função regular e fiscalizar a produção, transmissão, distribuição e comercialização de energia elétrica segundo as diretrizes definidas pelo governo federal.
+\paragraph{}Um dos pilares do RE-SEB foi a regulamentação. Em 1996 foi criada a Agência Nacional de Energia Elétrica - ANEEL, a qual tem como função regular e fiscalizar a produção, transmissão, distribuição e comercialização de energia elétrica segundo as diretrizes definidas pelo governo federal \cite{ANEEL}.
 
-\paragraph{}Foram aprovadas medidas que incentivavam a realização de contratos de longo prazo entre distribuidores e geradores \cite{EvolucaoSetorEletrico}. Além disso, foi dado livre acesso aos pequenos produtores (potenciais hidráulicos menores que 1MW e usinas termoelétricas com potencial inferior a 5MW) ao sistemas de transmissão e distribuição das concessionárias e permissionárias do serviço publico.
+\paragraph{}Foram aprovadas medidas que incentivavam a realização de contratos de longo prazo entre distribuidores e geradores \cite{EvolucaoSetorEletrico}. Além disso, foi dado livre acesso aos pequenos produtores (potenciais hidráulicos menores que 1MW e usinas termoelétricas com potencial inferior a 5MW) ao sistemas de transmissão e distribuição das concessionárias e permissionárias do serviço publico, assim como visto no decreto N$^{\circ}$ 2.003 de 10 de Setembro de 1996\cite{DECRETO_2003}.
 
 \paragraph{}Em 2001 houve uma grande crise energética no país que foi fruto de um conjunto de fatores, sendo a seca um deles. Então, mudanças estruturais foram implantadas no SEB, buscando assim melhorar a gestão, evitar incidentes, garantir a qualidade e incentivar a expansão do mesmo. Com isso, a organização da estrutura foi modificada, sendo que as instituições responsáveis pelo pleno funcionamento deste modelo são descritas a seguir \cite{CCEE}:
 
@@ -23,14 +23,15 @@
 	\item{\textbf{Operador Nacional do Sistema Elétrico - ONS}: Tem como objetivo a coordenação e controle da instalações de geração e transmissão de energia elétrica no Brasil, buscando garantir a todos os agentes o livre acesso à rede de transmissão, o menor custo de expansão do sistema e as melhores condições operacionais futuras \cite{ONS}.}
 	
 	\item{\textbf{Empresa de Pesquisa Energética - EPE}: Realiza pesquisas em áreas relacionadas com energia elétrica, petróleo, gás biocombustíveis e planejamento energético \cite{EPE}.}
-	
-	\begin{figure}[H]
-		\centering
-		\includegraphics[width=1\linewidth]{orgaos_governo.jpg}
-		\caption[\small{Instituições do setor elétrico brasileiro.}]{\label{instituicoesSEB} \small{Instituições do setor elétrico brasileiro. Fonte: EPE \cite{CCEE}.}}
-	\end{figure}
 \end{itemize} 
 
+\paragraph{}A dinâmica da relação entre órgãos pode ser observada na figura abaixo: 
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=1\linewidth]{orgaos_governo.jpg}
+	\caption[\small{Instituições do setor elétrico brasileiro.}]{\label{instituicoesSEB} \small{Instituições do setor elétrico brasileiro. Fonte: EPE \cite{CCEE}.}}
+\end{figure}
 
 \paragraph{}Outra medida tomada para facilitar o gerenciamento de toda a rede de geração, transmissão, e consumo de energia elétrica foi dividir o Sistema Interligado Nacional - SIN \cite{ONS} em quatro subsistemas sendo estes: Norte, Nordeste, Sudeste/Centro-Oeste e Sul. Vale ressaltar que existe conexão entre as partes, de forma que um subsistema pode auxiliar o suprimento da demanda de energia de outro em períodos de seca. Participam desse sistema diversos agentes \cite{CCEE}, sendo eles: 
 
@@ -47,28 +48,26 @@
 		
 \end{itemize}
 
-\paragraph{}A reestruturação também dividiu o mercado de energia elétrica brasileiro em dois ambientes de comercialização: Ambiente de Contratação Regulada - ACR e Ambiente de Contratação Livre - ACL. O primeiro ambiente é focado na contratação de energia para consumidores residenciais e indústrias de baixo consumo em geral. As negociações são feitas através de leilões onde geralmente os contratos de fornecimento de energia tem foco no médio e longo prazo (duração maior que 5 anos). As distribuidoras são obrigadas a comprar 100\% da energia utilizada através desse meio. O segundo ambiente é focado em contratações bilaterais, de forma a trazer benefícios para grande consumidores, conforme mostrado abaixo, pois podem negociar o preço da energia direto com os geradores \cite{PRECO_SPOT}. Os agentes que podem realizar compra por esse tipo de mercado são os agentes livres, conforme mostrados na tabela a seguir:
+\paragraph{}A reestruturação também dividiu o mercado de energia elétrica brasileiro em dois ambientes de comercialização: Ambiente de Contratação Regulada - ACR e Ambiente de Contratação Livre - ACL. O primeiro ambiente é focado na contratação de energia para consumidores residenciais e indústrias de baixo consumo em geral. As negociações são feitas através de leilões onde geralmente os contratos de fornecimento de energia tem foco no médio e longo prazo (duração maior que 5 anos). As distribuidoras são obrigadas a comprar 100\% da energia utilizada através desse meio. O segundo ambiente é focado em contratações bilaterais, de forma a trazer benefícios para grande consumidores, conforme mostrado abaixo, pois podem negociar o preço da energia direto com os geradores \cite{PRECO_SPOT}. Os agentes que podem realizar compra por esse tipo de mercado são os agentes livres, conforme mostrados na tabela a \ref{table:RegrasConsumidorLivre}:
 
 \begin{table}[h]
 	
 	\begin{center}
 		
-		\caption{Critérios vigentes para se tornar consumidor Livre.}
+		\caption{Critérios vigentes para se tornar consumidor Livre.}\label{table:RegrasConsumidorLivre}
 		
 		\begin{tabular}{|c|c|c|}\hline
 			
-			\textbf{Demanda Mínima} & \textbf{Tensão mínima de fornecimento} & \textbf{\makecell{Data da ligação \\do consumidor}}\\ \hline \vspace{-1.0mm}
+			\textbf{Demanda Mínima} & \textbf{\makecell{Tensão mínima \\de fornecimento}} & \textbf{\makecell{Data do \\ início do consumo \\na rede}}\\ \hline \vspace{-1.0mm}
 			
 			3MW & Qualquer Tensão & Após 07/07/1995 \\ \hline 
 			3MW & 69KV & Antes 07/07/1995 \\ \hline
 		\end{tabular}
 		
-	\end{center} 
-	\label{table:RegrasConsumidorLivre}
-	
+	\end{center} 	
 \end{table}
 
-\paragraph{} Dado o dinamismo do consumo, dificilmente a energia utilizada será igual a contratada. Uma das funções da CCEE é realizar medições tanto do que é produzido quanto o que é consumido. Esta instituição concentra informações sobre o montante de energia negociado em cada contrato do SEB. A diferença entre o que foi negociado e o que foi consumido  é liquidado utilizando como multiplicador o Preço de Liquidação das Diferença - PLD, o qual será explicado mais a frente. O saldo dos agentes no mercado de curto prazo se dá pelas seguintes equações \cite{PRECO_SPOT}. 
+\paragraph{} Dado o dinamismo do consumo, dificilmente a energia utilizada será igual a contratada \cite{CCEE}. Uma das funções da CCEE é realizar medições tanto do que é produzido quanto o que é consumido. Esta instituição concentra informações sobre o montante de energia negociado em cada contrato do SEB. A diferença entre o que foi negociado e o que foi consumido  é liquidado utilizando como multiplicador o Preço de Liquidação das Diferença - PLD, o qual será explicado mais a frente. O saldo dos agentes no mercado de curto prazo se dá pelas seguintes equações \cite{PRECO_SPOT}. 
 
 \begin{equation}
 	Saldo_{t, p} = SaldoEnergetico_{t, p} * PLD_t
@@ -79,9 +78,7 @@
 \paragraph{}Esse processo de liquidação das diferenças é realizado entre as partes envolvidas na negociação. A CCEE somente realiza o cálculo de quanto cada parte envolvida na negociação deve pagar ou receber. A importância do PLD não se resume somente ao MCP, pois muitos dos contratos do mercado livre são baseados nesse valor\cite{PrevisaoPrecoFuturoACL}. Isto permite que os agentes tomem estratégias diferentes para aumentar o faturamento ou diminuir o risco. Um exemplo disso seria um agente consumidor, que ao prever o aumento de preços nos próximos meses, pode buscar realizar contratos para abastecimento futuro a um preço menor do que seria pago. Outro exemplo seria um distribuidor, que ao prever um baixo PLD no MCP do mês atual, decide vender o excedente de energia contratada no mercado livre ao invés de receber o valor proporcional ao PLD.
 
 \section{O Cálculo do Preço da Liquidação das Diferenças}
-O grande desafio do setor é utilizar a energia produzida de maneira eficiente, reduzindo o custo da mesma e o risco de deficit tanto no mês atual quanto nos meses seguintes. Isto demanda a criação e utilização de novas tecnologias auxiliares ao planejamento.
-
-\paragraph{}Conforme observado na figura abaixo, o preço depende diretamente da quantidade de água nos reservatórios no momento atual e nos meses futuros.
+\paragraph{}O Brasil atualmente possui uma matriz elétrica diferente do que em geral é observado no mundo. Em média 65,2\% da energia utilizada no país vem de fontes hidráulicas, diferente do que ocorre em média no resto do mundo (aproximadamente 16,6\%), assim coma o visto em \cite{EPE}. Essa fonte além de ser renovável, tem impacto menor no meio ambiente e custos menores quando comparado com fontes baseadas em combustíveis fósseis. O grande ponto negativo é a característica volátil desse recurso, pois etes depende baste de condições climáticas, o que dificulta o planejamento para períodos longos. Na figura \ref{Decisao}, observa-se que o preço da energia elétrica depende diretamente da quantidade de água nos reservatórios no momento atual e nos meses futuros.
 
 \begin{figure}[H]
 	\begin{center}
@@ -100,10 +97,9 @@ O grande desafio do setor é utilizar a energia produzida de maneira eficiente, r
 	
 \end{figure}
 
-\paragraph{}Sendo assim, utilizar as usinas hidrelétricas - UHE na capacidade máxima gerará o menor custo de energia possível no mês atual, porém, se no futuro for necessário utilizar outras fontes para suprir a demanda energética, o custo pode ser muito maior do que em uma situação onde a produção energética da UHE foi distribuída durantes os meses consecutivos. Por um outro lado, caso a a quantidade de água armazenada em um reservatório supere o limiar máximo do mesmo, torna-se necessário liberar o excedente para o rio, situação chamada de ``vertimento". Isto é indesejável, pois resulta em um desperdício de energia barata. Portanto, um planejamento equivocado pode causar altas no PLD, o que afeta diretamente os agentes que participam do mercado de energia elétrico brasileiro.
+\paragraph{}O grande desafio do setor é utilizar a energia produzida de maneira eficiente, reduzindo o custo da mesma e o risco de déficit tanto no mês atual quanto nos meses seguintes.EPE\cite{EPE} e ONS\cite{ONS} são algum dos órgãos que buscam esse objetivo.
 
-
-\paragraph{}O Brasil atualmente possui uma matriz elétrica diferente do que em geral é observado no mundo. Em média 65,2\% da energia utilizada no país vem de fontes hidráulicas, diferente do que ocorre em média no resto do mundo (aproximadamente 16,6\%), assim como visto em \cite{EPE}. Essa fonte além de ser renovável, tem impacto menor no meio ambiente e custos menores quando comparado com fontes baseadas em combustíveis fósseis. O grande ponto negativo é a característica volátil desse recurso, pois depende baste de condições climáticas, o que dificulta o planejamento para períodos longos.
+\paragraph{}Sendo assim, utilizar as usinas hidrelétricas - UHE na capacidade máxima gerará o menor custo de energia possível no mês atual, porém, se no futuro for necessário utilizar outras fontes para suprir a demanda energética, o custo pode ser muito maior do que em uma situação onde a produção energética da UHE foi distribuída durantes os meses consecutivos. Por um outro lado, caso a quantidade de água armazenada em um reservatório supere o limiar máximo do mesmo, torna-se necessário liberar o excedente para o rio, situação chamada de ``vertimento". Isto é indesejável, pois resulta em um desperdício de energia barata. Portanto, um planejamento equivocado pode causar altas no PLD, o que afeta diretamente os agentes que participam do mercado de energia elétrico brasileiro.
 
 \begin{figure}[H]
 	\centering
@@ -132,11 +128,11 @@ O grande desafio do setor é utilizar a energia produzida de maneira eficiente, r
 	\caption[\small{Instituições do setor elétrico brasileiro.}]{\label{PLDMensal} \small{PLD mensal. Fonte: CCEE \cite{CCEE}.}}
 \end{figure}
 
-\paragraph{}No gráfico acima observa-se que existem pontos onde o PLD aumentou abruptamente. No ano de 2007, o SEB tinha passado por uma recente reestruturação da organização, a qual não foi suficiente para evitar o acontecimento. Durante o período de racionamento (2001/06 - 2002/02) a demanda foi menor do que a oferta, porém com o passar do anos ela voltou a se aproximar da curva de oferta. Após abril de 2005, houve um período sem investimento na capacidade energética sistema. Junto com esse fato, ocorreu um período de baixa afluência nas usinas hidrelétricas. Além disso, entre 2007 e 2008 ocorreu a crise mundial do setor financeiro \cite{FinancialCrisis}.
+\paragraph{}No gráfico \ref{PLDMensal} observa-se que existem momentos onde o PLD aumentou abruptamente. No ano de 2007, o SEB tinha passado por uma recente reestruturação da organização, a qual não foi suficiente para evitar o acontecimento. Após abril de 2005, houve um período sem investimento na capacidade energética sistema. Junto com esse fato, ocorreu um período de baixa afluência nas usinas hidrelétricas. Além disso, entre 2007 e 2008 ocorreu a crise mundial do setor financeiro \cite{FinancialCrisis}.
 
 \paragraph{}Outro ponto relevante é visto no ano de 2014, onde segundo \cite{CRISE_2014}, o governo diminui, via decreto, as tarifas impostas em um momento de demanda crescente. Além disso, o atraso em obras de geração e transmissão e a escassez de chuvas colaboraram com o fato observado.
 
-\paragraph{}O PLD é calculado semanalmente e disponibilizado sexta-feira pela CCEE conforme a equação \ref{FormulaPrecoPLD}, com vigência na semana seguinte. Para cada um dos submercados do SIN são divulgados valores para os três patamares de carga: leve, médio e pesado. Esses estão relacionados com a hora do dia e o consumo, sendo que o patamar é pesado em horários de alto consumo e leve nos período de baixo demanda energética. O PLD mensal por subsistema é calculado também pela CCEE através da média dos preços ponderadas pelo tempo em cada patamar.
+\paragraph{}O PLD é calculado semanalmente e disponibilizado às sexta-feiraa pela CCEE conforme a equação \ref{FormulaPrecoPLD}, com vigência na semana seguinte. Para cada um dos submercados do SIN são divulgados valores para os três patamares de carga: leve, médio e pesado. Esses estão relacionados com a hora do dia e o consumo, sendo que o patamar é pesado em horários de alto consumo e leve nos período de baixo demanda energética. O PLD mensal por subsistema é calculado também pela CCEE através da média dos preços ponderadas pelo tempo em cada patamar.
 
 \begin{equation} \label{FormulaPrecoPLD}
 PLD_{s, r, \omega} = min(max(CMO_{s, r, \omega}, PLD_{min_{ano}}), PLD_{max_{ano}})
@@ -171,12 +167,10 @@ PLD_{s, r, \omega} = min(max(CMO_{s, r, \omega}, PLD_{min_{ano}}), PLD_{max_{ano
 
 \paragraph{}O PLD mínimo é calculado com base no maior valor entre: i) o calculado com base na Receita Anual de Geração - RAG  das usinas hidrelétricas em regime de cotas, nos termos da Lei nº 12.783/2013, excluídos os valores relacionados à remuneração e reintegração de investimentos, e adicionada a estimativa de Compensação Financeira pelo Uso dos Recursos Hídricos - CFURH; e ii) as estimativas dos custos de geração da usina de Itaipu para o ano seguinte, fornecidas pela Itaipu Binacional para fins de reajustes e/ou revisões tarifárias.
 
-O valores de definidos para os últimos 5 anos foram:
-\begin{table}[H]
-	
-	\begin{center}
-		
-		\caption{Preço mínimo e máximo do PLD.}
+O valores definidos para os últimos 5 anos sá vistos na tabela \ref{table:PLD_MIN_MAX}
+\begin{table}[H]	
+	\begin{center}		
+		\caption{Preço mínimo e máximo do PLD.}\label{table:PLD_MIN_MAX}
 		
 		\begin{tabular}{|c|c|c|}\hline
 			
@@ -189,9 +183,7 @@ O valores de definidos para os últimos 5 anos foram:
 			2019 & 42,35 & 513,89 \\ \hline 
 		\end{tabular}
 		
-	\end{center} 
-	\label{table:PLD_MIN_MAX}
-	
+	\end{center} 		
 \end{table}
 
 
@@ -199,11 +191,11 @@ O valores de definidos para os últimos 5 anos foram:
 Algum deles são \cite{MANUAIS}:
 \begin{itemize}
 	\item{NEWAVE: Utilizado no planejamento de médio prazo (até 5 anos), com espaçamento mensal entre as previsões}
-	\item{DECOMP: Utilizado no planejamento de curto prazo (até 12) com base semanal}
+	\item{DECOMP: Utilizado no planejamento de curto prazo (até 12 meses) com base semanal}
 \end{itemize}
 \paragraph{}O cálculo do PLD é feito com base no CMO obtido do programa DECOMP, o qual é disponibilizado somente para agentes cadastrados no CCEE e tem como entrada alguns dados como as vazões para uma determinada bacia, o MLT - Média de Longo Termo, perdas do sistema entre outros. A lista completa de dados utilizados na entrada pode ser vista em \cite{MANUAIS}, 
 
-\paragraph{}O acrônimo MLT - Média de Longo Termo refere-se à média com período anual, utilizando uma série histórica dos valores de ENA - Energia Natural Afluente para cada um dos meses desde 1931. A ENA, por sua vez é a energia que pode ser gerada através da vazão da água em uma determinada bacia.
+\paragraph{}O acrônimo MLT - Média de Longo Termo refere-se à média com período anual, utilizando uma série histórica dos valores de ENA - Energia Natural Afluente para cada um dos meses desde 1931. A ENA, por sua vez, é a energia que pode ser gerada através da vazão da água em uma determinada bacia.
 
 \paragraph{}A busca por um modelo matemático baseado no DECOMP que possa ser utilizado na previsão do PLD é de interesse não só dos agentes que participam do mercado elétrico brasileiro, como também de empresas indiretamente relacionadas ao setor financeiro e meio acadêmico. O entendimento da dinâmica do preço pode ajudar na formulação de novos modelos de previsão e alteração dos já existentes (DECOMP e NEWAVE). Com isso, pode-se obter melhorias nas atividades de planejamento feitas pelos órgãos.
 
